syntax = "proto3";

package join;

option go_package = "github.com/edgelesssys/constellation/joinservice/joinproto";

service API {
    rpc IssueJoinTicket(IssueJoinTicketRequest) returns (IssueJoinTicketResponse);
}


message IssueJoinTicketRequest {
    string disk_uuid = 1;
    string node_name = 2;
    bool is_control_plane = 3;
}

message IssueJoinTicketResponse {
    bytes state_disk_key = 1;
    bytes owner_id = 2;
    bytes cluster_id = 3;
    bytes kubelet_key = 4;
    bytes kubelet_cert = 5;
    string api_server_endpoint = 6;
    string token = 7;
    string discovery_token_ca_cert_hash = 8;
    string certificate_key = 9;
}
